--- a/product-catalog-service/Jenkinsfile
+++ b/product-catalog-service/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             steps {
             	sh 'docker-compose build'
             	sh 'docker-compose down'
-            	sh 'docker compose up'
+            	sh 'docker-compose up'
             }
         }
       }
